# tts

./: .gitignore  LICENSES.md  MASTER_PLAN_90D_SORANI.md  README.md  UI_MASTER_PLAN.md  start-api.bat  start.bat
.github/: pull_request_template.md
docs/: API_CONTRACT_MATRIX.md  CONTRIBUTOR_WORKFLOW.md  FALLBACK_POLICY.md  GOVERNANCE_BASELINE.md  OWNERSHIP_MATRIX.md  PHASE_EXECUTION_LOG.md  RELEASE_CHECKLIST.md  VOICE_LICENSING.md
english/: .gitignore  CHANGELOG.md  Dockerfile  MASTER_PLAN.md  README.md  docker-compose.yml  pyproject.toml
english/deploy/: prometheus.yml
english/docs/: api_reference.md  architecture.md  benchmarks.md  nlp_pipeline.md  ssml_reference.md  voice_cloning.md
english/legacy/: bilingual_tts.py  config.py  demo_bilingual.py  english_tts.py  example_usage.py  main.py  nlp_processor.py  quick_test.py  requirements.txt  tts_engine.py  tts_pipeline.py
english/scripts/: benchmark.py  download_models.py  eval_g2p.py
english/src/eng_tts/: __init__.py
english/src/eng_tts/acoustic/: __init__.py  base.py  legacy_pyttsx3.py  piper.py  qwen3_model.py  styletts2_model.py  vits_model.py  xtts_model.py
english/src/eng_tts/acoustic/speakers/: embeddings.py
english/src/eng_tts/api/: __init__.py  auth.py  rest.py  schemas.py  websocket.py
english/src/eng_tts/cli/: main.py
english/src/eng_tts/config/: __init__.py  defaults.yaml  settings.py  voice_characters.py  voices.py  voices.yaml
english/src/eng_tts/core/: __init__.py  cache.py  exceptions.py  frame.py  frame_builder.py  interfaces.py  pipeline.py  registry.py
english/src/eng_tts/nlp/: __init__.py  codeswitch.py  discourse.py  linguistic.py  segmentation.py  sentiment.py  syllabify.py
english/src/eng_tts/nlp/g2p/: __init__.py  arpabet_ipa.py  hybrid.py  lexicon.py  neural.py
english/src/eng_tts/nlp/homograph/: __init__.py  dictionary.json  disambiguator.py
english/src/eng_tts/nlp/normalizer/: __init__.py  base.py  rule_based.py
english/src/eng_tts/nlp/normalizer/lexicons/: abbreviations.json  acronyms.json  currencies.json  units.json
english/src/eng_tts/nlp/prosody/: __init__.py  breaks.py  contour.py  predictor.py
english/src/eng_tts/postproc/: __init__.py  denoise.py  loudness.py  resample.py
english/src/eng_tts/ssml/: __init__.py  ast.py  parser.py  walker.py
english/src/eng_tts/streaming/: __init__.py  chunker.py
english/src/eng_tts/ui/: __init__.py  gradio_app.py
english/src/eng_tts/utils/: __init__.py  audio.py  logging.py
english/src/eng_tts/vocoder/: __init__.py  hifigan.py
english/src/eng_tts/voices/reference_assets/: MANIFEST.json  README.md
english/tests/: conftest.py
english/tests/golden/: normalizer_cases.yaml
english/tests/unit/: test_api_clone.py  test_character_catalog_integrity.py  test_g2p.py  test_homograph.py  test_normalizer.py  test_pipeline.py  test_prosody.py  test_ssml.py
kurdish/: README.md
scripts/: audit_voice_distinctness.py  bootstrap_reference_pack.py  build_licenses_md.py  check_distinctness_quick.py  check_originals.py  download_piper_models.py  download_qwen3_tts.py  ingest_reference_voice.py  librivox_starter_pack.example.json  render_voice_probes.py
ui/: .env.example  .gitignore  .prettierrc.json  Caddyfile  Dockerfile  README.md  docker-compose.yml  eslint.config.js  index.html  package.json  playwright.config.ts  (+5 more)
(+102 files in other folders)
