[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eng-tts"
version = "0.1.0"
description = "World-class English Text-to-Speech engine with full NLP front-end"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "SAFA" }]
keywords = ["tts", "speech-synthesis", "nlp", "english", "vits", "styletts2", "xtts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    # Core NLP
    "regex>=2023.0",
    "inflect>=7.0",
    "num2words>=0.5.13",
    "pysbd>=0.3.4",
    # Config / infra
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "structlog>=24.1",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "diskcache>=5.6",
    # Audio
    "numpy>=1.24,<2.0",
    "soundfile>=0.12",
    "librosa>=0.10",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7",
    "g2p-en>=2.1",
    "phonemizer>=3.2",
    "syllapy>=0.7.2",
]
ml = [
    "torch>=2.1",
    "transformers>=4.40",
    "sentencepiece>=0.2",
]
acoustic = [
    "TTS>=0.22",  # Coqui TTS (VITS, XTTS-v2)
]
piper = [
    "piper-tts>=1.4",        # Lightweight ONNX neural TTS (offline)
    "onnxruntime>=1.17",     # CPU runtime; install onnxruntime-gpu for CUDA
]
qwen3 = [
    "qwen-tts>=0.1.1",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.20",
]
ui = [
    "gradio>=4.20",
]
postproc = [
    "pyloudnorm>=0.1.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.4",
    "black>=24.4",
    "pre-commit>=3.7",
]
full = [
    "eng-tts[nlp,ml,acoustic,api,ui,postproc]",
]

[project.scripts]
eng-tts = "eng_tts.cli.main:app"

[project.urls]
Homepage = "https://github.com/SAFA/tts"
Repository = "https://github.com/SAFA/tts"

[tool.hatch.build.targets.wheel]
packages = ["src/eng_tts"]

[tool.hatch.build.targets.wheel.force-include]
"src/eng_tts/nlp/normalizer/lexicons" = "eng_tts/nlp/normalizer/lexicons"
"src/eng_tts/nlp/homograph/dictionary.json" = "eng_tts/nlp/homograph/dictionary.json"
"src/eng_tts/config/defaults.yaml" = "eng_tts/config/defaults.yaml"
"src/eng_tts/config/voices.yaml" = "eng_tts/config/voices.yaml"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --strict-markers"
markers = [
    "slow: tests that take >1s",
    "gpu: tests requiring GPU",
    "integration: end-to-end tests",
    "golden: snapshot tests",
]
